[gd_scene load_steps=4 format=3 uid="uid://ba5wun2glqohf"]

[ext_resource type="Script" uid="uid://cu68gywbqw6hp" path="res://Video-4-Animacao-e-Transicao/TweenOrquestrador/Orquestrador.gd" id="1_i6w8b"]
[ext_resource type="PackedScene" uid="uid://cbpv4wd3rhex0" path="res://Video-2-Transicao/TelaDeOpcoes.tscn" id="2_83tn6"]
[ext_resource type="PackedScene" uid="uid://6olx1kokcduu" path="res://Video-2-Transicao/MenuPrincipal.tscn" id="3_m3hhv"]

[node name="Orquestrador" type="Node"]
script = ExtResource("1_i6w8b")

[node name="TelaDeOpcoes" parent="." instance=ExtResource("2_83tn6")]

[node name="MenuPrincipal" parent="." instance=ExtResource("3_m3hhv")]

[node name="ScrollContainer" type="ScrollContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2

[connection signal="pressed" from="TelaDeOpcoes/MenuPrincipal" to="." method="_on_menu_principal_pressed"]
[connection signal="pressed" from="MenuPrincipal/MarginContainer/PanelContainer/VBoxContainer/Opcoes" to="." method="_on_opcoes_pressed"]

[editable path="TelaDeOpcoes"]
[editable path="MenuPrincipal"]
